Change default plane fuel config